--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 
+secret_key.py
+
+
 # Created by https://www.toptal.com/developers/gitignore/api/python,django,pycharm
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,django,pycharm
 
